Fixed issue with zip code input alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -218,13 +218,15 @@ footer {
         .contact-inputs {
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
-            flex-grow: 2;
+        }
+
+        .contact-inputs label {
+            flex-basis: 20%;
         }
 
         .contact-inputs input,
         .contact-inputs select {
-            width: 75%;
+            width: 80%;
         }
 
         #zipcode {
@@ -234,6 +236,4 @@ footer {
         #copyright {
             margin-top: 3em;
         }
-
-
     }
